Fix italic text not showing mistake

--- a/frontend/src/components/blocks/SlidingTextBlock/css/slidingtextblock.less
+++ b/frontend/src/components/blocks/SlidingTextBlock/css/slidingtextblock.less
@@ -36,7 +36,7 @@
       left: 0%;
       width: 100%;
       height: 100vh !important;
-      background-position: center center;
+      background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
       // z-index: -1;
@@ -237,6 +237,9 @@
           margin-bottom: 17px !important;
           font-weight: 500;
         }
+      }
+      p em {
+        font-style: italic;
       }
     }
   }
